src/objects/Apttus_Config2__LineItem__c.object
<CustomObject>
    <description>Represents a product or service line item</description>
    <fields>
        <fullName>APTPS_Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_ABO_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ABO Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_ATP_Check_Status__c</fullName>
        <formula>IF( 
  APTS_ATP_Cleared__c = TRUE,
  
  IF( 
     AND(Apttus_Config2__Quantity__c &lt;= APTS_Expected_Delivery_Quantity__c,  
     APTS_Requested_Delivery_Date__c = APTS_Expected_Delivery_Date__c), 
     
     IMAGE(&quot;/resource/1498724254000/GreenTrafficLight&quot;, &quot;OK&quot;), 
     
     IF(
        AND(Apttus_Config2__Quantity__c &gt; APTS_Expected_Delivery_Quantity__c, 
        APTS_Requested_Delivery_Date__c = APTS_Expected_Delivery_Date__c), 

        IMAGE(&quot;/resource/1498724234000/YellowTrafficLight&quot;, &quot;OK&quot;), 

        IMAGE(&quot;/resource/1498724205000/RedTrafficLight&quot;, &quot;OK&quot;) 
       )
    ), 

  IMAGE(&quot;/resource/1498724270000/GreyTrafficLight&quot;, &quot;OK&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATP Check Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ATP_Cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATP Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Additional_chargesO__c</fullName>
        <description>Sum of Add_charges out of SAP</description>
        <label>Additional charges</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Additional_charges__c</fullName>
        <label>Additional charges</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Adjustment_Line_Item_Count__c</fullName>
        <label>Adjustment Line Item Count</label>
        <summaryFilterItems>
            <field>Apttus_Config2__AdjustmentLineItem__c.APTS_Discount_Type__c</field>
            <operation>equals</operation>
            <value>Manual</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus_Config2__AdjustmentLineItem__c.Apttus_Config2__LineItemId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Adjustments_applied__c</fullName>
        <formula>If(Apttus_Config2__NetUnitPrice__c!=  Apttus_Config2__BasePrice__c ,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustments applied</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_AgreementExtId__c</fullName>
        <label>Agreement External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_AgreementId__c</fullName>
        <formula>Apttus_Config2__ConfigurationId__r.Apttus_CMConfig__AgreementId__r.Id</formula>
        <label>AgreementId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Line Item</label>
        <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
        <relationshipLabel>Line Items (Agreement Line Item)</relationshipLabel>
        <relationshipName>APTS_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Allow_to_Order_Outside_of_Contracts__c</fullName>
        <formula>Apttus_Config2__BillToAccountId__r.APTS_Allow_to_Order_Outside_of_Contracts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allow to Order Outside of Contract Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Asset_Change_type__c</fullName>
        <label>Asset Change type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Physical Conversion</fullName>
                </value>
                <value>
                    <fullName>Physical Conversion</fullName>
                </value>
                <value>
                    <fullName>Non-Physical movement</fullName>
                </value>
                <value>
                    <fullName>Physical Movement</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Auto_renew_New_UX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto renew New UX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Bill_to_Party_Ingredients__c</fullName>
        <formula>IF(OR(Apttus_Config2__ClassificationHierarchy__c =&apos;Coffee | Cafitesse&apos;,
Apttus_Config2__ClassificationHierarchy__c =&apos;&amp;More&apos;,
Apttus_Config2__ClassificationHierarchy__c =&apos;Concepts | Subscription&apos;,
Apttus_Config2__ClassificationHierarchy__c =&apos;Concepts | Coffee Kitchen&apos;,
Apttus_Config2__ClassificationHierarchy__c =&apos;Machine&apos;)
,Apttus_Config2__ConfigurationId__r.Apttus_CMConfig__AgreementId__r.APTS_Bill_to_Party_Ingredients__r.Name,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill to Party (Ingredients) and Payer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bill_to_Party_Ingredients_and_Payer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill to Party (Ingredients)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Line Items (Bill to Party (Ingredients) and Payer)</relationshipLabel>
        <relationshipName>Line_Items6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Bill_to_Party_Machines_Services__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill to Party (Machines &amp; Services)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Line Items (Bill to Party (Machines &amp; Services))</relationshipLabel>
        <relationshipName>Line_Items7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Bill_to_Party__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bill to Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Line Items (Bill to Party)</relationshipLabel>
        <relationshipName>Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_frequency_New_UX__c</fullName>
        <label>Billing frequency New UX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Business_type__c</fullName>
        <formula>TEXT(Apttus_Config2__ConfigurationId__r.Apttus_Config2__BusinessObjectType__c)</formula>
        <label>Business type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Buying_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Buying Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Line Items (Buying Group)</relationshipLabel>
        <relationshipName>Line_Items3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_CTC_Old_TOC__c</fullName>
        <label>CTC_Old_TOC</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Call_Out_Coverage__c</fullName>
        <description>Usef for Preparing Rollup for Call out Coverage</description>
        <formula>Apttus_Config2__PriceListItemId__r.APTS_Call_Out_Coverage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Out Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Call_out_coverage1__c</fullName>
        <label>Call out coverage1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_CancelledDate__c</fullName>
        <description>Cancelled Date for Contract Change</description>
        <label>CancelledDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Ext_Id__c</fullName>
        <formula>IF(ISPICKVAL(Apttus_Config2__LineType__c, &apos;Option&apos;) || (ISPICKVAL(Apttus_Config2__LineType__c,&apos;Product/Service&apos;) &amp;&amp;  NOT(Apttus_Config2__HasOptions__c)),Apttus_Config2__ProductId__r.APTS_Sales_Catalog__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Ext Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Hierarchy_Text__c</fullName>
        <description>Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <formula>Category_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Hierarchy Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Label__c</fullName>
        <description>Label of the category</description>
        <label>Category Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Level__c</fullName>
        <description>Category level field for CER implementation</description>
        <label>Category Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>APTS_Category_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Caterer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Caterer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Line Items (Caterer)</relationshipLabel>
        <relationshipName>Line_Items4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Consumer_Price__c</fullName>
        <label>Consumer Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Contact_Customer_Before_Delivery__c</fullName>
        <description>Contact Customer Before Delivery</description>
        <formula>TEXT(Apttus_Config2__AttributeValueId__r.APTS_Contact_Customer_Before_Delivery__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Customer Before Delivery</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConversionId__c</fullName>
        <label>Conversion Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Credit_Proposal_XC09_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Credit BillingSchedules will be skipped in creating XC09 orders if this field is set to TRUE.</description>
        <label>Credit Proposal (XC09 Block)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Cumulative_Call_Out_Coverage__c</fullName>
        <label>Cumulative Call Out Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Cumulative_Labour_coverage__c</fullName>
        <label>Cumulative Labour coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Cumulative_Spare_Parts_Coverage__c</fullName>
        <label>Cumulative Spare Parts Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_PO_Item_Number__c</fullName>
        <description>Field used for EPI Order requirement</description>
        <inlineHelpText>Field used for EPI Order requirement</inlineHelpText>
        <label>Customer PO Item Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Deal_Guidance__c</fullName>
        <description>Show Traffic Light based on the Manual Adjustments</description>
        <label>Deal Guidance</label>
        <summaryFilterItems>
            <field>Apttus_Config2__AdjustmentLineItem__c.APTS_Deal_Guidance_Indicator__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus_Config2__AdjustmentLineItem__c.Apttus_Config2__LineItemId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Default_Billing_Frequency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Billing Frequency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Default_Selling_UOM__c</fullName>
        <formula>Apttus_Config2__PriceListItemId__r.APTS_Default_Selling_Uom__c</formula>
        <label>Default Selling UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Description__c</fullName>
        <formula>Apttus_Config2__Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description (Product Name)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_End_Date_New_UX__c</fullName>
        <label>End Date New UX</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Expected_Category_Discount_Amount__c</fullName>
        <label>Expected Category Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Expected_Delivery_Date__c</fullName>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Expected_Delivery_Quantity__c</fullName>
        <label>Expected Delivery Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Extended_cost__c</fullName>
        <formula>Apttus_Config2__BaseExtendedCost__c + ( Apttus_Config2__OptionCost__c *  Apttus_Config2__Quantity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Fixed_Term_Product__c</fullName>
        <formula>IF(AND(Apttus_Config2__HasOptions__c = FALSE,  ISPICKVAL(Apttus_Config2__LineType__c, &quot;Product/Service&quot;), Apttus_Config2__ProductId__r.APTS_Sales_Catalog__c = &quot;0703&quot;),True,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fixed Term Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Freight_Charge__c</fullName>
        <label>Freight Charge</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Full_Operating__c</fullName>
        <formula>TEXT(Apttus_Config2__OptionId__r.APTS_Full_Operating__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Operating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Global_linkage_ID__c</fullName>
        <label>Global linkage ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_First_Level__c</fullName>
        <description>Obtains the first level in the hierarchy to group elements in the cart</description>
        <formula>IF(
	FIND(&apos;|&apos;, Apttus_Config2__ClassificationHierarchy__c) &gt; 0,
	TRIM(LEFT(Apttus_Config2__ClassificationHierarchy__c,FIND(&apos;|&apos;, Apttus_Config2__ClassificationHierarchy__c)-1)),
	Apttus_Config2__ClassificationHierarchy__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy First Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Last_Level__c</fullName>
        <description>Obtains the last level in the hierarchy to show it in the cart</description>
        <formula>IF(
	FIND(&apos;|&apos;, Apttus_Config2__ClassificationHierarchy__c) &gt; 0,
	IF(
		FIND(&apos;|&apos;,Apttus_Config2__ClassificationHierarchy__c,FIND(&apos;|&apos;, Apttus_Config2__ClassificationHierarchy__c)+1) = 0,
		RIGHT(Apttus_Config2__ClassificationHierarchy__c,LEN(Apttus_Config2__ClassificationHierarchy__c) - FIND(&apos;|&apos;, Apttus_Config2__ClassificationHierarchy__c)),
		RIGHT(RIGHT(Apttus_Config2__ClassificationHierarchy__c,LEN(Apttus_Config2__ClassificationHierarchy__c) - FIND(&apos;|&apos;, Apttus_Config2__ClassificationHierarchy__c)),LEN(RIGHT(Apttus_Config2__ClassificationHierarchy__c,LEN(Apttus_Config2__ClassificationHierarchy__c) - FIND(&apos;|&apos;, Apttus_Config2__ClassificationHierarchy__c))) - FIND(&apos;|&apos;,RIGHT(Apttus_Config2__ClassificationHierarchy__c,LEN(Apttus_Config2__ClassificationHierarchy__c) - FIND(&apos;|&apos;, Apttus_Config2__ClassificationHierarchy__c))))
	),
	Apttus_Config2__ClassificationHierarchy__c
)</formula>
        <label>Hierarchy Last Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Installation_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Contracted_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked when a product is contracted.</description>
        <label>Contracted Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_DateDefaulted_AmendED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is DateDefaulted AmendED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_DateDefaulted_AmendSD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is DateDefaulted AmendSD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_DateDefaulted_NewLI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is DateDefaulted NewLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_DateDefaulted_OriginalLI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is DateDefaulted OriginalLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Item_Category__c</fullName>
        <label>APTS_Item_Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A09</fullName>
                </value>
                <value>
                    <fullName>A07</fullName>
                </value>
                <value>
                    <fullName>A04</fullName>
                </value>
                <value>
                    <fullName>A03</fullName>
                </value>
                <value>
                    <fullName>A05</fullName>
                </value>
                <value>
                    <fullName>A10</fullName>
                </value>
                <value>
                    <fullName>A06</fullName>
                </value>
                <value>
                    <fullName>A12</fullName>
                </value>
                <value>
                    <fullName>A08</fullName>
                </value>
                <value>
                    <fullName>A11</fullName>
                </value>
                <value>
                    <fullName>A02</fullName>
                </value>
                <value>
                    <fullName>A01</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_JDE_Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>JDE Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Line Items (JDE Company)</relationshipLabel>
        <relationshipName>Line_Items5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_LSP_Details__c</fullName>
        <formula>IF(
AND(
ISPICKVAL(Apttus_Config2__LineType__c, &apos;Product/Service&apos;),
ISPICKVAL( Apttus_Config2__ProductId__r.Apttus_Config2__ConfigurationType__c , &apos;Bundle&apos;),
Apttus_Config2__IsPrimaryLine__c == true),
If (AND (TEXT(Apttus_Config2__ConfigurationId__r.Apttus_Config2__OrderId__r.APTS_Contract_Change__c) == &apos;Yes&apos;,TEXT(Apttus_Config2__LineStatus__c) == &apos;New&apos;),NULL,
HYPERLINK(&quot;/apex/c__APTS_LSPDetails?id=&quot; &amp;Id&amp; &quot;&amp;configId=&quot; &amp;Apttus_Config2__ConfigurationId__c&amp; &quot;&amp;lineNum=&quot; &amp; TEXT(Apttus_Config2__LineNumber__c), IF( Apttus_Config2__ConfigurationId__r.Order_Sub_Type__c = &apos;Conversion Order&apos;, IMAGE(&quot;/resource/APTS_BillingDetailsButton&quot;, &quot;Billing&quot;),
IMAGE(&quot;/resource/APTS_LSPDetails&quot;, &quot;LSP Details&quot;))
,&quot;_self&quot;)),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bundle Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Labour_Coverage1__c</fullName>
        <label>Labour coverage1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Labour_Coverage__c</fullName>
        <description>Labour coverage for Rollup fields</description>
        <formula>Apttus_Config2__PriceListItemId__r.APTS_Labour_Coverage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labour Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_LineItemExtId__c</fullName>
        <label>Line Item External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_List_Price_New_UX__c</fullName>
        <label>List Price New UX</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_List_price__c</fullName>
        <label>List price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Master_list_price__c</fullName>
        <label>Master list price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_MigrationDate__c</fullName>
        <label>Migration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_NetWeight_Kg__c</fullName>
        <description>Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <formula>Apttus_Config2__OptionId__r.APTS_Net_Weight_Kg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Weight (Kg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Adjustment_Amount__c</fullName>
        <formula>Apttus_Config2__ExtendedPrice__c  -  Apttus_Config2__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price_Inc_taxes__c</fullName>
        <label>Net Price(Inc. taxes)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_OldContractCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Old Contract Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Option_Group_Text__c</fullName>
        <formula>Apttus_Config2__OptionGroupLabel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Option Group Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Frequency__c</fullName>
        <description>Order Frequency required for the subscription orders</description>
        <formula>TEXT(Apttus_Config2__AttributeValueId__r.APTS_Order_Frequency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Order_LSP_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order LSP Detail</description>
        <label>Order LSP Detail</label>
        <referenceTo>APTS_Order_LSP_Details__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LSPDetail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Original_start_date__c</fullName>
        <label>Original Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Paid_and_Free_Vend_Differences__c</fullName>
        <formula>IF(
  OR(
    AND(Apttus_Config2__AttributeValueId__r.APTS_List_Price_per_cup_FV__c &lt;&gt; 
           Apttus_Config2__AttributeValueId__r.APTS_List_Price_per_cup__c,
            ISPICKVAL( Apttus_Config2__AttributeValueId__r.APTS_Type_of_Consumption__c, &apos;Both&apos;)),

    AND(Apttus_Config2__AttributeValueId__r.APTS_Base_Price_Override_per_cup__c &lt;&gt; 
           Apttus_Config2__AttributeValueId__r.APTS_Base_Price_Override_per_cup_FV__c,
            ISPICKVAL( Apttus_Config2__AttributeValueId__r.APTS_Type_of_Consumption__c, &apos;Both&apos;))






),TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid and Free Vend Differences</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_PayerIngredients__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payer Ingredients</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Line Items (Payer Ingredients)</relationshipLabel>
        <relationshipName>Line_Items8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_PayerMachinesServices__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payer Machines &amp; Services</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Line Items (Payer Machines &amp; Services)</relationshipLabel>
        <relationshipName>Line_Items9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Payer_Machines_Services__c</fullName>
        <formula>Apttus_Config2__ConfigurationId__r.Apttus_CMConfig__AgreementId__r.APTS_Payer_Machines_Services__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Machines &amp; Services</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Payer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Line Items (Payer)</relationshipLabel>
        <relationshipName>Line_Items2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method</label>
        <referenceTo>APTS_Payment_Method__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_PercentOfDistribution__c</fullName>
        <label>Distribution%</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_PhysicalAssetExtId__c</fullName>
        <description>Physical Asset External id copied from Asset in case of Contract Change</description>
        <label>Physical Asset External Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Planogram__c</fullName>
        <formula>IF (AND(Apttus_Config2__HasOptions__c = TRUE,   ISPICKVAL(Apttus_Config2__LineType__c, &quot;Option&quot;), Apttus_Config2__OptionId__r.APTS_Option_Group_Indicator__c = &apos;04&apos;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planogram</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Plant_Code__c</fullName>
        <label>Plant Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PriceListItemExtId__c</fullName>
        <label>Price List Item External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>